2004-09-16 08:26 Bill Jones <w.t.jones@larc.nasa.gov>

	* Function signature to gridSmoothNode() changed to add GridBool
	arg that allows caller conditional smoothing of nodes on geometry.
	Argument FALSE prevents any nodes on geometry from being modified
	in an attempt to optimize the corresponding Tet.  Modules affected
	include src/gridcad.c, src/gridcad_ruby.c, src/gridfortran.c, and
	src/gridmpi.c.	This change propagates from gridparallelsmooth_()
	in src/gridfortran.c to gridParallelSmooth() of src/gridmpi.c
	and finally to gridSmoothNode() of src/gridcad.c.  Unit test of
	gridSmoothNode() was also changed in gridcad_ruby.c.

	* Added conditional compilation of GNU gcc Floating Point Exception
	trapping (SIGFPE) to gridcreate_() of src/gridfortran.c.  If TRAPFPE
	is defined, FE_INVALID, FE_DIVBYZERO, and FE_OVERFLOW will be trapped
	and will cause segfault on occurance.  Used mainly for debugging.

2004-09-15 10:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeAt) The new cell configuration
	with the inserted node is tested for its minimum aspect ratio. A
	node will not be inserted if causes the aspect ratio to drop below
	0.01. Note that negative cells have an aspect ratio of -1.0, so
	the creation of negative cells will also be avoided. This replaces
	the logic that would "undo" a split with an edge collapse, which
	was not correctly paralleized.

2004-09-10 17:36 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (gridSmoothNodeQP) added check to avoid 0/0 if two
	incedent cells have same ARDerivative resulting in same
	minDirection as nearestDirection where ???covariant metric
	terms??? are all equal, therefore 0/0 => NaN.

2004-09-03 10:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelrelaxsurf_) added. API changed.
	* src/gridmpi.c (gridParallelRelaxNegativeFaceAreaUV) added.
	* src/gridcad.c (gridSmoothNodeFaceAreaUV) kick out if on edge node.
	
2004-09-03 13:36 Bill Jones <w.t.jones@larc.nasa.gov>
